shared/footer.css
/* FOOTER */
#main-footer {
  min-height: 11vh;
  background-color: #000;
  color: #ffffff;
}

#main-footer a,
#main-footer p {
  font-size: 1.4rem;
}

#main-footer section {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  height: 100%;
  padding: 2rem;
  gap: 1rem 14rem;
}

#main-footer a {
  color: var(--color-primary-light);
}

#main-footer .framework {
  color: #3fdd3f;
  font-weight: 600;
}

#main-footer .framework:hover {
  color: #15a815;
  font-weight: 600;
}

#main-footer a:hover {
  color: var(--color-primary);
}

@media only screen and (min-width: 630px) {
  #main-footer section {
    justify-content: space-around;
  }
}

